# SetupCMakeOpenGL

./: CMakeLists.txt  README.md
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: CONTRIBUTORS.md
src/: main.cpp
